[package]
name = "AzureKeyVaultSignTool"
version = "0.1.0"
authors = ["Kevin Jones <kevin@vcsjones.com>"]
include = ["src/**/*"]
publish = false
license = "MIT"
build = "build.rs"

[dependencies]
serde = "1.0.11"
hyper = "0.11.2"
futures = "0.1"
tokio-core = "0.1"
[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"

[lib]
name = "akvst"
crate-type = ["dylib"]
